fix: make live readiness test hermetic